--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -22,16 +22,20 @@
     text-align: unset !important;
     p {
       font-weight: 600;
-      color: #fff;
-      background-color: rgb(103, 103, 103);
-      // padding: 8px 10px;
+      color: #000;
+      background-color: rgb(231, 231, 231);
+      
       border-radius: 5px;
-      width: 150px;
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-      margin-top: 10px;
+      // width: 150px;
+      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+      // margin-top: 10px;
       cursor: pointer;
       direction: unset !important;
       text-align: center !important;
+      span {
+        // padding: 4px 5px;
+        display: block;
+      }
       @include xs {
         width: 100px;
         font-size: 0.9rem;
@@ -48,14 +52,14 @@
     }
 
     .list {
-      padding: 0px 15px;
-      background-color: rgb(238, 238, 238);
+      // padding: 0px 15px;
+      // background-color: rgb(238, 238, 238);
       text-align: center !important;
     }
 
     .match {
-      padding: 0px 15px;
-      background-color: rgb(238, 238, 238);
+      // padding: 0px 15px;
+      // background-color: rgb(238, 238, 238);
       text-align: center !important;
       direction: unset !important;
       text-align: unset !important;
