--- a/components/quizzes/MultipleChoice/multipleChoice.module.scss
+++ b/components/quizzes/MultipleChoice/multipleChoice.module.scss
@@ -22,6 +22,9 @@
       margin-right: 10px;
     }
   }
+  .headH6 {
+    font-weight: 600;
+  }
   .answers {
     margin-top: 15px;
     display: flex;
@@ -49,6 +52,11 @@
         border-radius: 50%;
         margin: 0 10px;
       }
+    }
+    .ansImage {
+      width: 100px;
+      height: 90px;
+      display: block;
     }
   }
 
