--- a/components/quizzes/SingleChoice/singleChoice.module.scss
+++ b/components/quizzes/SingleChoice/singleChoice.module.scss
@@ -21,6 +21,9 @@
       margin-right: 10px;
     }
   }
+  .headH6 {
+    font-weight: 600;
+  }
   .answers {
     margin-top: 15px;
     display: flex;
@@ -48,6 +51,11 @@
         border-radius: 50%;
         margin: 0 10px;
       }
+    }
+    .ansImage {
+      width: 100px;
+      height: 90px;
+      display: block;
     }
   }
 
