--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -24,6 +24,7 @@
       font-weight: 600;
       color: #000;
       background-color: rgb(231, 231, 231);
+      margin-bottom: 5px;
       
       border-radius: 5px;
       // width: 150px;
