--- a/components/ImageSection/imageSection.module.scss
+++ b/components/ImageSection/imageSection.module.scss
@@ -5,6 +5,9 @@
     width: 100%;
     height: auto;
     max-height: 200px;
+    &.fullImage {
+      max-height: 100% !important;
+    }
     // object-fit: cover;
     @include xs {
       max-height: 140px;
