--- a/components/QuizSection/quizSection.module.scss
+++ b/components/QuizSection/quizSection.module.scss
@@ -16,8 +16,31 @@
       top: 0;
       z-index: -1;
     }
+    .questionIcon {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      display: none;
+      place-items: center;
+      i {
+        font-size: 80px;
+        color: rgb(255 64 4 / 30%);
+        animation: show 0.3s forwards;
+      }
+      @keyframes show {
+        0% {
+          transform: scale(0.2);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+    }
     &:hover {
-      border: 3px solid var(--first-color);
+      background-color: rgb(222, 203, 197, 0.3);
+      .questionIcon {
+        display: grid;
+      }
     }
   }
 }
