fix image matching quiz issue

--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -87,7 +87,7 @@
       }
       &.arabic {
         direction: rtl !important;
-        * {
+        div {
           direction: rtl !important;
         }
       }
