--- a/components/quizzes/ImageMatching/imageMatching.module.scss
+++ b/components/quizzes/ImageMatching/imageMatching.module.scss
@@ -5,6 +5,10 @@
   &.animation {
     animation: show 1s forwards;
   }
+  * {
+    direction: ltr !important;
+    text-align: left !important;
+  }
   @keyframes show {
     0%{
       opacity: 0;
@@ -25,27 +29,21 @@
     border-radius: 5px;
     direction: ltr !important;
     text-align: left !important;
-    * {
-      direction: ltr !important;
-      text-align: left !important;
-    }
   }
   .imagesBox {
     margin-top: 20px;
     // margin-left: 65px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    gap: 10px;
+    justify-content: center;
+    gap: 20px;
     &.ar {
-      // margin-left: unset;
-      // margin-right: 70px !important;
     }
   } 
   .answers {
     display: flex;
-    justify-content: space-evenly;
-    gap: 10px;
+    justify-content: center;
+    gap: 20px;
     margin-top: 20px;
     // margin-left: 50px;
     // &.ar {
@@ -69,12 +67,15 @@
     // margin-right: 1%;
     background-color: rgb(229, 229, 229);
     border-radius: 5px;
+    border: none;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   }
 
   .btn {
     text-align: center;
     margin-top: 30px;
+    display: flex;
+    justify-content: center;
     button {
       background-color: var(--book-color);
       color: #fff;
