--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -61,7 +61,7 @@ a {
   // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
   background-color: #088a19;
   padding: 10px 0;
-  border-radius: 5px !important;
+  // border-radius: 5px !important;
   overflow: hidden;
   object-fit: contain;
   div {
