--- a/components/modals/SectionPreview/sectionPreview.module.scss
+++ b/components/modals/SectionPreview/sectionPreview.module.scss
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 99999 !important;
+  z-index: 9999;
   animation: showModal 0.2s forwards ease-in-out 1;
   .area {
     background-color: transparent;
@@ -85,6 +85,12 @@
     }
 
     .area__content {
+      background-color: #fff;
+      min-height: 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 50px 50px 30px;
       &.arabic {
         direction: rtl !important;
         text-align: right !important;
