--- a/components/VideoSection/videoSection.module.scss
+++ b/components/VideoSection/videoSection.module.scss
@@ -12,7 +12,7 @@
   }
   button {
     width: 80px;
-    // height: 80px;
+    height: 50px;
     overflow: hidden;
     border: none;
     padding: 0;
