--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -53,11 +53,14 @@ $behance: #1769ff;
   // --dark-info: #00a1b5;
 
   --book-color: #fff;
-  --main-color: #00A0D7;
-  --first-color: #00A0D7;
-  --second-color: #EF4D94;
-  --third-color: #4DBEEE;
-  --forth-color: #7F3F98;
+  --main-color: #00a0d7;
+  --first-color: #00a0d7;
+  --second-color: #ef4d94;
+  --third-color: #4dbeee;
+  --forth-color: #7f3f98;
+  --hover-color: #f0f0f0;
+  --success-color: #27ae60;
+  --error-color: #e74c3c;
 
   // BORDERS
   --light-border: #60829e;
