--- a/components/ActivitySection/activitySection.module.scss
+++ b/components/ActivitySection/activitySection.module.scss
@@ -1,10 +1,50 @@
-@import '../../styles/mixins.scss';
+@import "../../styles/mixins.scss";
 
-.videoSection {
+.activitySection {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin: 10px 0;
+  .activityImagePreview {
+    cursor: pointer;
+    position: relative;
+    display: grid;
+    place-items: center;
+    min-height: 120px;
+    img {
+      object-fit: contain;
+      height: auto;
+      position: relative;
+      z-index: -1;
+    }
+    .questionIcon {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      display: none;
+      place-items: center;
+      z-index: 9999;
+      i {
+        font-size: 70px;
+        color: rgb(255 64 4 / 30%);
+        animation: show 0.3s forwards;
+      }
+      @keyframes show {
+        0% {
+          transform: scale(0.2);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+    }
+    &:hover {
+      background-color: rgb(222, 203, 197, 0.3);
+      .questionIcon {
+        display: grid;
+      }
+    }
+  }
   button {
     width: 80px;
     height: 80px;
@@ -16,7 +56,7 @@
     padding: 5px;
     margin: 0 20px;
     img {
-      animation: rotate 5s infinite linear; 
+      animation: rotate 5s infinite linear;
     }
     @include xs {
       width: 60px;
