--- a/components/home/Navbar/navbar.module.scss
+++ b/components/home/Navbar/navbar.module.scss
@@ -1,13 +1,37 @@
 .navbar {
   background-color: var(--first-color);
-  border-bottom: 1px solid #e5e5e5;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid #e5e5e5;
   padding: 10px;
-  position: relative;
-  z-index: 1;
   margin-bottom: 30px;
+  .wrapper {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   h5 {
     color: #fff;
     text-align: center !important;
+  }
+  button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    background-color: #fff;
+    outline: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    i {
+      font-size: 22px;
+      color: var(--main-color);
+    }
+    &:hover {
+      background-color: var(--main-color);
+      i {
+        color: #fff;
+      }
+    }
   }
 }
