--- a/components/quizzes/SingleChoice/singleChoice.module.scss
+++ b/components/quizzes/SingleChoice/singleChoice.module.scss
@@ -1,15 +1,15 @@
-@import '../../../styles/mixins.scss';
+@import "../../../styles/mixins.scss";
 
 .singelChoice {
   &.animation {
     animation: show 1s forwards;
   }
   @keyframes show {
-    0%{
+    0% {
       opacity: 0;
       transform: translateX(100px);
     }
-    100%{
+    100% {
       opacity: 1;
       transform: translateY(0px);
     }
@@ -28,6 +28,7 @@
     margin-top: 15px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     background-color: rgb(232, 232, 232);
     padding: 10px 20px;
     border-radius: 5px;
