--- a/pages/reports/reports.module.scss
+++ b/pages/reports/reports.module.scss
@@ -54,6 +54,11 @@
         margin-top: 30px;
         border: 1px solid rgb(228, 228, 228);
 
+        div {
+          max-width: 800px;
+          margin: 0 auto;
+        }
+
         h5 {
           background-color: #ededed;
           padding: 10px 20px;
