fix header logo

--- a/components/home/Navbar/navbar.module.scss
+++ b/components/home/Navbar/navbar.module.scss
@@ -11,9 +11,9 @@
     justify-content: space-between;
     align-items: center;
   }
-  h5 {
-    color: #fff;
-    text-align: center !important;
+  img {
+    width: 120px;
+    cursor: pointer;
   }
   button {
     width: 50px;
