--- a/components/UIs/CorrectAnswer/correctAnswer.module.scss
+++ b/components/UIs/CorrectAnswer/correctAnswer.module.scss
@@ -4,33 +4,75 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 99999;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
   .inside {
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     audio {
       position: absolute;
       opacity: 0;
     }
     img {
       background-color: transparent;
-      width: 250px;
-      height: 250px;
+      width: 220px;
+      height: 220px;
       object-fit: contain;
-      animation: show 1s forwards;
+      animation: show 4s linear infinite;
       box-shadow: none;
       filter: drop-shadow(5px 5px 10px rgb(83, 83, 83));
+      margin-bottom: 50px;
+    }
+    .results {
+      color: #fff;
+      h1 {
+        text-align: center;
+        padding: 5px 10px;
+        margin-bottom: 20px;
+        font-size: 60px;
+        &.success {
+          // text-shadow: 2px 2px 8px var(--success-color);
+          -webkit-text-stroke-width: 2px;
+          -webkit-text-stroke-color: #000;
+          color: var(--success-color);
+          // background-color: var(--success-color);
+        }
+        &.fail {
+          // text-shadow: 2px 2px 8px var(--error-color);
+          -webkit-text-stroke-width: 2px;
+          -webkit-text-stroke-color: #000;
+          color: var(--error-color);
+        }
+      }
+      button {
+        background-color: var(--main-color);
+        padding: 10px 40px;
+        font-size: 1.2rem;
+        margin-top: 20px;
+        width: 100%;
+        color: #fff;
+        border: 1px solid var(--main-color);
+        outline: none;
+        &:hover {
+          filter: brightness(0.9);
+        }
+      }
     }
     @keyframes show {
       0% {
-        transform: scale(0.5) rotate(10deg);
+        transform: scale(0.9) rotate(10deg);
+      }
+      50% {
+        transform: scale(1) rotate(-10deg);
       }
       100% {
-        transform: scale(1) rotate(-10deg);
+        transform: scale(0.9) rotate(10deg);
       }
     }
   }
