--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/mixins.scss';
+@import "../../styles/mixins.scss";
 
 .login {
   display: flex;
@@ -6,12 +6,12 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: rgb(97,202,253);
-  background: linear-gradient(184deg, rgba(97,202,253,1) 0%, rgba(0,160,215,1) 100%);
+  background: #129fd8;
+  // background: linear-gradient(184deg, rgba(97,202,253,1) 0%, rgba(0,160,215,1) 100%);
   direction: rtl;
   img {
-    width: 220px;
-    margin-bottom: 100px;
+    width: 300px;
+    margin-bottom: 50px;
     @include xs {
       width: 180px;
       margin-bottom: 50px;
@@ -22,7 +22,7 @@
     padding: 40px;
     border-radius: 30px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    text-align: center; 
+    text-align: center;
     margin: 0 15px;
     @include xs {
       width: 90%;
