--- a/components/home/Navbar/navbar.module.scss
+++ b/components/home/Navbar/navbar.module.scss
@@ -23,9 +23,16 @@
     background-color: #fff;
     outline: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    padding: 0 !important;
     i {
       font-size: 22px;
       color: var(--main-color);
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
     }
     &:hover {
       background-color: var(--main-color);
