--- a/pages/add-student/addStudent.module.scss
+++ b/pages/add-student/addStudent.module.scss
@@ -27,6 +27,13 @@
         outline: none;
         padding: 10px 20px;
         border-radius: 5px;
+        &.error {
+          border-color: var(--error-alert) !important;
+        }
+      }
+      span {
+        color: var(--error-alert);
+        font-size: 0.9rem;
       }
       textarea {
         height: 150px;
@@ -57,6 +64,13 @@
       input {
         padding: 10px;
         width: 1500%;
+        &.error {
+          border-color: var(--error-alert) !important;
+        }
+      }
+      span {
+        color: var(--error-alert);
+        font-size: 0.9rem;
       }
     }
     .btn {
