--- a/pages/student/studentDetails.module.scss
+++ b/pages/student/studentDetails.module.scss
@@ -1,4 +1,31 @@
 .studentDetails {
   direction: rtl !important;
   text-align: right !important;
+  background-color: rgb(248, 248, 248);
+  min-height: 100vh;
+  padding-bottom: 50px;
+  .tabs {
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+  }
+  .tabs {
+    p {
+      margin: 0;
+      padding: 10px;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      display: flex;
+      gap: 15px;
+      i {
+        font-size: 1.2rem;
+      }
+      &.active {
+        background-color: var(--main-color);
+        color: #fff;
+      }
+    }
+  }
 }
